# sparql

./: .gitignore  .windsurfrules  Cargo.toml  Makefile  _tmp_snapshot.sh  after_rdf_triples_results.txt  complete_mapping.ttl  correct_mapping.ttl  rs_ontop_core.control  schema_info.json  sparql_explorer.html  tmp_subquery.sql
.git.backup_/: COMMIT_EDITMSG  config  index  packed-refs
src/: benchmark.rs  codegen.rs  config.rs  database.rs  error.rs  function.rs  http.rs  ir.rs  lib.rs  listener.rs  mapping.rs  metadata.rs  optimizer.rs  parser.rs  rewriter.rs  service.rs  substitution.rs
tests/: auto_verify.sh  complex_sparql_test_suite_v2.sql  readme.md  run_sprint8.sh  run_sprint8_tests.sh
tools/: analyze_geof_distance_error.py  analyze_r2rml_bugs.py  analyze_test_output.py  analyze_test_results.py  analyze_translation_errors.py  build_and_install.py  build_bind_fix.py  build_debug.py  build_release.py  check_r2rml_content.py  check_r2rml_full.py  check_test_class.py  classify_failures.py  count_test_results.py  debug_ask_detail.py  debug_ask_join.py  debug_ask_simple.py  debug_translate.py  deploy_bind_fix.py  find_backup.py  generate_correct_r2rml.py  insert_complete_r2rml.py  insert_correct_mapping.py  insert_r2rml_psycopg2.py  insert_sdlc_data.py  install_ext.py  install_extension.py  list_tables.py  run_bind_test_direct.py  run_tests_check_bind.py  test_bind_debug.py  test_bind_fix.py  test_bind_single.py  test_failure_classification.py  test_simple_bind.py  tmp_add_distinct_debug.py  tmp_add_distinct_join_test.py  tmp_add_format_validation_http.py  (+233 more)
(+265 files in other folders)
