[package]
name = "rs_ontop_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_ontop_core"
crate-type = ["cdylib", "lib"]

[dependencies]
pgrx = "0.11"
spargebra = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
rio_turtle = "0.8"
rio_api = "0.8"
tiny_http = "0.12"
url = "2.5"
rayon = "1.8"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dashmap = "5.5"
indexmap = "2.5"
crossbeam = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
http = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
tabled = "0.15"
crossterm = "0.27"
indicatif = "0.17"
console = "0.15"
toml = "0.8"

[[bin]]
name = "pgrx_embed"
path = "src/bin/pgrx_embed.rs"
required-features = ["with-embed"]

[[bin]]
name = "ontop"
path = "src/bin/ontop.rs"

[[bin]]
name = "ontop_start_sparql_server"
path = "src/bin/ontop_start_sparql_server.rs"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
with-embed = []

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = "thin"
